--- a/cog/webx/src/main/webapp/dhxproclist.html
+++ b/cog/webx/src/main/webapp/dhxproclist.html
@@ -38,10 +38,6 @@
 <link rel="stylesheet" type="text/css" href="js/dhtmlxTree/codebase/dhtmlxtree.css">
 <script src="js/dhtmlxTree/codebase/dhtmlxtree.js"></script>
    
-<<<<<<< HEAD
-=======
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
->>>>>>> be6e5a2b38666c17ec306afec472c771958263ca
 <script src="js/jquery-min-1.9.1.js"></script>
 <script src="js/trabajo/trabajo.js"></script>
 <script src="js/trabajo/dhxproclist.js"></script>
@@ -192,7 +188,7 @@ fieldset {margin: 25px;}
 			<div style="float: left; padding-top: 40px;"><h3>Process Start Form</h3></div>
 			<div>
 			<button onclick="tbjEvents.fireEvent({ name: 'start_it', data: {}})" type="submit" id="_cog_start" name="_cog_start" style="margin-left: 60px; margin-top: 20px; border: 0; background: transparent">
-			    <img src="img/start.jpg" width="85" heght="85" alt="start" />
+			    <img src="img/start.jpg" style="width:85px, height:85px" alt="start" />
 			</button>
 			</div>
 		</div>
