--- a/cog/webx/src/main/webapp/dhxrpt.html
+++ b/cog/webx/src/main/webapp/dhxrpt.html
@@ -38,10 +38,6 @@
 <link rel="stylesheet" type="text/css" href="js/dhtmlxTree/codebase/dhtmlxtree.css">
 <script src="js/dhtmlxTree/codebase/dhtmlxtree.js"></script>
    
-<<<<<<< HEAD
-=======
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
->>>>>>> be6e5a2b38666c17ec306afec472c771958263ca
 <script src="js/jquery-min-1.9.1.js"></script>
 <script src="js/trabajo/trabajo.js"></script>
 <script src="js/trabajo/dhxrpt.js"></script>
@@ -140,6 +136,6 @@ fieldset {margin: 25px;}
 <body>
 <div id="cog_header" style="height: 50px;"></div>
 <div id="layout" style="position: relative; top: 20px; left: 20px; width: 600px; height: 800px; aborder: #B5CDE4 1px solid;"></div>
-<iframe id="dnld" src="" style="visibility:hidden">
+<iframe id="dnld" src="" style="visibility:hidden"></iframe>
 </body>
 </html>
