--- a/cog/webx/src/main/webapp/header.html
+++ b/cog/webx/src/main/webapp/header.html
@@ -1,4 +1,4 @@
-<span class="coglogo"><div style="float:left;" onmouseover="showAbout();">Cog</div></span>
+<div class="coglogo" style="float:left;" onmouseover="showAbout();">Cog</div>
 <a href="javascript:logout()">
 	<img alt="Logout" style="width:32px; height:32px; margin-right: 80px; border:none; float: right;" src="img/exit.png">
 </a>
