--- a/cog/webx/src/main/webapp/login.html
+++ b/cog/webx/src/main/webapp/login.html
@@ -74,7 +74,7 @@ td {width: 100px;}
 		<form action="j_security_check" method="POST">
 			<table class="loginform">
 				<tr>
-					<td style="padding-bottom: 15px;" colspan="2"><span style="font-size: 7em;">Cog</td>
+					<td style="padding-bottom: 15px;" colspan="2"><span style="font-size: 7em;">Cog</span></td>
 				</tr>
 				<tr>
 					<td>Username</td>
@@ -88,7 +88,7 @@ td {width: 100px;}
 			<input type="submit" value="Login">
 		</form>
 		</div>
-		<div id="cog" style="padding: 50; "><img style="width: 120px; height: 120px; background: none;  vertical-align: middle; float: right; "src="img/1gear.gif"/><div>
+		<div id="cog" style="padding: 50; "><img style="width: 120px; height: 120px; background: none;  vertical-align: middle; float: right; "src="img/1gear.gif"/></div>
 	</div>	
 </body>
 </html>
