--- a/parent/webx/src/main/webapp/dhxproclist.html
+++ b/parent/webx/src/main/webapp/dhxproclist.html
@@ -187,8 +187,8 @@ fieldset {margin: 25px;}
 		<div>
 			<div style="float: left; padding-top: 40px;"><h3>Process Start Form</h3></div>
 			<div>
-			<button onclick="tbjEvents.fireEvent({ name: 'start_it', data: {}})" type="submit" id="_cog_start" name="_cog_start" style="margin-left: 60px; margin-top: 20px; border: 0; background: transparent">
-			    <img src="img/start.jpg" style="width:85px, height:85px" alt="start" />
+			<button onclick="tbjEvents.fireEvent('start_it')" type="submit" id="_cog_start" name="_cog_start" style="margin-left: 60px; margin-top: 20px; border: 0; background: transparent">
+			    <img src="img/start.jpg" style="width:85px; height:85px" alt="start" />
 			</button>
 			</div>
 		</div>
